--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
             <div id="panel">
                 
                 <table id="t1">
-                    <tr><td id="t1col1">DISTANCE</td><td id="distance"></td></tr>
+                    <tr><td id="t1col1">LEVEL</td><td id="level" class="t1col2"></td></tr>
+                    <tr><td id="t1col1">POINTS</td><td id="points" class="t1col2"></td></tr>
+                    <tr><td id="t1col1">LIVES</td><td id="lives" class="t1col2"></td></tr>
+                    <tr><td id="t1col1">DISTANCE</td><td id="distance" class="t1col2"></td></tr>
+                    <tr><td id="t1col1">WALS DESTROYED</td><td id="walls" class="t1col2"></td></tr>
                 </table>
                 
             </div>
