Project F1 - commit #16. Soldier positioning bug, other sintax bugs.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         <tr><td id="t1col1">POINTS</td><td id="points" class="t1col2"></td></tr>
                         <tr><td id="t1col1">LIVES</td><td id="lives" class="t1col2"></td></tr>
                         <tr><td id="t1col1">DISTANCE</td><td id="distance" class="t1col2"></td></tr>
-                        <tr><td id="t1col1">WALS DESTROYED</td><td id="walls" class="t1col2"></td></tr>
+                        <tr><td id="t1col1">WALLS DESTROYED</td><td id="walls" class="t1col2"></td></tr>
                         <tr><td id="t1col1">SOLDIERS KILLED</td><td id="soldiers" class="t1col2"></td></tr>
                     </table>
                     
